--- a/Lab3/web/app.yaml
+++ b/Lab3/web/app.yaml
@@ -1,20 +1,22 @@
-runtime: python-compat # versão do python a ser utilizada (esta versão é a 2.7, a versão 3 por enquanto não é suportada)
-env: flex # Tipo do ambiente da aplicação, pode ser standard ou flex
-api_version: 1 # versão do aplicativo
-threadsafe: yes # Habilita o uso de multiplas threads (Recomendado para aplicações web)
-service: default # Nome do servico
+runtime: custom
+env: flex
+api_version: 1
+threadsafe: yes
+entrypoint: gunicorn -b :$PORT main:app
+service: default
 
-default_expiration: "1s" # Tempo para que os dados salvos em cache expirem
+default_expiration: 1s
 
-handlers: # Define as rotas e os scripts que irao gerencia-las
-- url: / # url do handler
-  static_files: frontend/index.html # Definição de quais arquivos estáticos estarão visíveis para esta rota
-  upload: index.html # Arquivo que será retornado quando uma requisição para a rota / for feita
+runtime_config:
+  python_version: 2
 
-- url: /api/.* # url definida com expressão regular, dessa forma é possível definir um conjunto de urls válidas que passarão por este handler
-  script: main.app # script python que será chamado toda vez que uma requisição para esta url for feita
-                   # É preciso ter uma arquivo chamado main.py que contém a variável app.
+resources:
+  cpu: 0.1
+  memory_gb: 0.9
+  disk_size_gb: 10
 
-- url: /(.*) # url definida com expressão regular, dessa forma é possível definir um conjunto de urls válidas que passarão por este handler
-  static_files: frontend/\1 # Definição de quais arquivos estáticos estarão visíveis para esta rota
-  upload: frontend/(.*) # Arquivo que será retornado quando uma requisição para esta rota for feita.
+manual_scaling:
+  instances: 1
+
+health_check:
+  enable_health_check: false
